# mira

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  meson.build
.github/workflows/: commit-ci.yml  release-ci.yml
examples/: luna_pinyin.test.yaml
include/: CMakeLists.txt  config.h.in  meson.build  output_collector.h  rime.h
spec/: mira.schema.json
src/: CMakeLists.txt  main.cpp  meson.build  output_collector.cpp  rime.cpp
subprojects/: setup.sh
